--- a/src/05-components/_navList.scss
+++ b/src/05-components/_navList.scss
@@ -75,6 +75,8 @@ ol.x-list-group {
 	}
 
 	> li {
+		--tw: normal;
+		--ta: left;
 		a,
 		label,
 		button {
